change pic size

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>Emma Hershey</title>
 <body>
-<img src="plitvice.jpg" width="1200" height="800">
+<img src="plitvice.jpg">
 <A HREF="http://url here/">Resume</A>
 <A HREF="http://url here/">Bio</A>
