change pic size

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
+<head>
 <title>Emma Hershey</title>
+</head>
 <body>
+<P>
 <img src="plitvice.jpg">
+</P>
+<P>
 <A HREF="http://url here/">Resume</A>
 <A HREF="http://url here/">Bio</A>
+</P>
