first resume commit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@ Emma Hershey
 <img src="plitvice.jpg">
 </P>
 <P>
-<A HREF="http://ehersh.github.io/resume.html">Resume</A>
+<A HREF="http://ehersh.github.io/resume">Resume</A>
 <A HREF="http://url here/">Bio</A>
 </P>
