--- a/resume.html
+++ b/resume.html
@@ -3,11 +3,16 @@
 	<title>
 	Emma Hershey's Resume
 	</title>
-Emma Hershey
+	<h1>Emma Hershey</h1>
 </head>
 
 <body>
-Hire meeeeeee
+<p> </p>
+<table border="1"> <tr>
+	<td> Education </td>
+	<td> Tufts </td>
+	<td> May 2014 </td> </tr> </table>
+<p> That's the end of the table! </p>
 </body>
 
 
