--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 <body>
 <p> </p>
 <table border="1"> <tr>
-	<td> Education </td>
+	<td> <h1>Education</h1> </td>
 	<td> Tufts </td>
 	<td> May 2014 </td> </tr> </table>
 <p> That's the end of the table! </p>
