--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
 
 <body>
 <p> </p>
-<table border="1"> <tr>
+<table> <tr>
 	<td> <h1>Education</h1> </td>
 	<td> Tufts </td>
 	<td> May 2014 </td> </tr> </table>
