--- a/resume.html
+++ b/resume.html
@@ -8,10 +8,17 @@
 
 <body>
 <p> </p>
-<table> <tr>
-	<td> <h2>Education</h2> </td>
-	<td> Tufts </td>
-	<td> May 2014 </td> </tr> </table>
+<table border="1"> 
+	<tr>
+		<td> <h2>Education</h2> </td>
+		<td> Tufts 
+		May 2014 </td>
+	</tr> 
+	<tr>
+		<td> <h2>Experience</h2> </td>
+		<td> Lotsa Jobs <p> Another Job </p> </td>
+		
+	</table>
 <p> That's the end of the table! </p>
 </body>
 
