--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ Emma Hershey
 </P>
 <P>
 <A HREF="http://ehersh.github.io/resume">Resume</A>
-<A HREF="http://url here/">Bio</A>
+<A HREF="http://ehersh.github.io/bio">Bio</A>
 </P>
