--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,15 @@
 	<tr>
 		<td> <h2>Experience</h2> </td>
 		<td> Lotsa Jobs <p> Another Job </p> </td>
-		
+	</tr>	
+	<tr>
+		<td> <h2>Relevant Coursework/h2> </td>
+		<td> Computer Science: web programming!<p> Math: abstract algebra :( </p> </td>
+	</tr>
+	<tr>
+		<td> <h2>Skills</h2> </td>
+		<td> Computer: UNIX/Linux, C++, C, Obective-C, Scheme, ML, HTML, CSS, OpenGL, Xcode,  Adobe Photoshop, Microsoft Office <p> Languages: Fluent in Spanish </p> </td>
+	</tr>	
 	</table>
 <p> That's the end of the table! </p>
 </body>
