first style edit

--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,20 @@
 
 <body>
 <p> </p>
+
+<div id="main">
+	<div class="section">
+		<div class="section head">
+			<h2>Education</h2>
+		</div>
+		<div class="content">
+			<h3>Tufts University</h3>
+			<h4>Computer Science and Mathematics, Music Minor</h4>
+			<h5>B.S. expected May 2014</h5>
+		</div>
+	</div>
+</div>
+
 <table border="1"> 
 	<tr>
 		<td> <h2>Education</h2> </td>
