--- a/resume.html
+++ b/resume.html
@@ -16,9 +16,8 @@
 			<h2>Education</h2>
 		</div>
 		<div class="content">
-			<h3>Tufts University</h3>
+			<h3>Tufts University</h3>  <h5>B.S. expected May 2014</h5>
 			<h4>Computer Science and Mathematics, Music Minor</h4>
-			<h5>B.S. expected May 2014</h5>
 		</div>
 	</div>
 </div>
