first style edit

--- a/resume.html
+++ b/resume.html
@@ -22,11 +22,13 @@
 	</div>
 </div>
 
-<table border="1"> 
+<table border="1" width=90%> 
 	<tr>
 		<td> <h2>Education</h2> </td>
-		<td> Tufts 
-		May 2014 </td>
+		<td> <table> <tr> <td> <h3>Tufts University</h3> </td>
+			<td align:right> <h5>B.S. expected May 2014 </h5> </td> </table>
+			<p> Computer Science and Mathematics, Music Minor
+		</td>
 	</tr> 
 	<tr>
 		<td> <h2>Experience</h2> </td>
