--- a/resume.html
+++ b/resume.html
@@ -26,8 +26,8 @@
 	<tr>
 		<td> <h2>Education</h2> </td>
 		<td> <table> <tr> <td> <h3>Tufts University</h3> </td>
-			<td align:right> <h5>B.S. expected May 2014 </h5> </td> </table>
-			<p> Computer Science and Mathematics, Music Minor
+			<td> <p> B.S. expected May 2014 </p> </td> </table>
+			<p> Computer Science and Mathematics, Music Minor </p>
 		</td>
 	</tr> 
 	<tr>
