--- a/resume.html
+++ b/resume.html
@@ -26,8 +26,8 @@
 	<tr>
 		<td> <h2>Education</h2> </td>
 		<td> <table> <tr> <td> <h3>Tufts University</h3> </td>
-			<td> <p> B.S. expected May 2014 </p> </td> </table>
-			<p> Computer Science and Mathematics, Music Minor </p>
+			<td> <p> B.S. expected May 2014 </p> </td>
+			<tr><p> Computer Science and Mathematics, Music Minor </p></tr></table>
 		</td>
 	</tr> 
 	<tr>
