--- a/resume.html
+++ b/resume.html
@@ -25,8 +25,8 @@
 <table border="1" width=90%> 
 	<tr>
 		<td> <h2>Education</h2> </td>
-		<td> <table> <tr> <td> <h3>Tufts University</h3> </td>
-			<td> <p> B.S. expected May 2014 </p> </td> </tr>
+		<td> <table border="0"> <tr> <td> <h3>Tufts University</h3> </td>
+			<td> <h5> B.S. expected May 2014 </h5> </td> </tr>
 			<tr><td><p> Computer Science and Mathematics, Music Minor </p></td></tr></table>
 		</td>
 	</tr> 
