first style edit

--- a/resume.html
+++ b/resume.html
@@ -10,24 +10,12 @@
 <body>
 <p> </p>
 
-<div id="main">
-	<div class="section">
-		<div class="section head">
-			<h2>Education</h2>
-		</div>
-		<div class="content">
-			<h3>Tufts University</h3>  <h5>B.S. expected May 2014</h5>
-			<h4>Computer Science and Mathematics, Music Minor</h4>
-		</div>
-	</div>
-</div>
-
 <table border="1" width=90%> 
 	<tr>
 		<td> <h2>Education</h2> </td>
 		<td> <table border="0"> <tr> <td> <h3>Tufts University</h3> </td>
 			<td> <h5> B.S. expected May 2014 </h5> </td> </tr>
-			<tr><td><p> Computer Science and Mathematics, Music Minor </p></td></tr></table>
+			<tr><td> Computer Science and Mathematics, Music Minor </td></tr></table>
 		</td>
 	</tr> 
 	<tr>
