first style edit

--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
 <table border="1" width=90%> 
 	<tr>
 		<td> <h2>Education</h2> </td>
-		<td> <table border="0"> <tr> <td> <h3>Tufts University</h3> </td>
+		<td> <table border="0" cellspacing="0"> <tr> <td> <h3>Tufts University</h3> </td>
 			<td> <h5> B.S. expected May 2014 </h5> </td> </tr>
 			<tr><td> Computer Science and Mathematics, Music Minor </td></tr></table>
 		</td>
