first style edit

--- a/resume.html
+++ b/resume.html
@@ -19,6 +19,7 @@
 		</td>
 		</tr>
 		<tr>
+		&nbsp
 	    <td> <table border="0" cellspacing="0"> <tr> <td> <h3>Aquincum Institute of Technology</h3><h6> - Budapest, Hungary</h6></td>
 			<td> <h5> Spring 2013 </h5> </td> </tr>
 			<tr><td><h4> Study Abroad program in Computer Science </h4></td></tr></table>
