--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
 		<td> <h2>Education</h2> </td>
 		<td> <table border="0" cellspacing="0"> <tr> <td> <h3>Tufts University</h3> <h6> - Medford, MA </h6> </td>
 			<td> <h5> B.S. expected May 2014 </h5> </td> </tr>
-			<tr><td><h4> Computer Science and Mathematics, Music Minor </h4></td></tr>
+			<tr><td><h4> Computer Science and Mathematics, Music Minor </h4></td></tr></table>
 		</td>
 		</tr>
 		<tr>
