first style edit

--- a/resume.html
+++ b/resume.html
@@ -12,19 +12,32 @@
 
 <table border="1" width=90%> 
 	<tr>
-		<td> <h2>Education</h2> </td>
-		<td> <table border="0" cellspacing="0"> <tr> <td> <h3>Tufts University</h3> <h6> - Medford, MA </h6> </td>
-			<td> <h5> B.S. expected May 2014 </h5> </td> </tr>
-			<tr><td><h4> Computer Science and Mathematics, Music Minor </h4></td></tr></table>
+		<td> 
+			<h2>Education</h2> 
 		</td>
-		</tr>
-		<tr>
-	    <td> <table border="0" cellspacing="0"> <tr> <td> <h3>Aquincum Institute of Technology</h3><h6> - Budapest, Hungary</h6></td>
-			<td> <h5> Spring 2013 </h5> </td> </tr>
-			<tr><td><h4> Study Abroad program in Computer Science </h4></td></tr></table>
+		<td> 
+			<table border="0" cellspacing="0"> 
+				<tr> 
+					<td> 
+						<h3>Tufts University - Medford, MA </h3> 
+						<h4> Computer Science and Mathematics, Music Minor </h4>
+					</td>
+					<td> 
+						<h5> B.S. expected May 2014 </h5> 
+					</td> 
+				</tr>
+				<tr>
+					<td>
+						<h3>Aquincum Institute of Technology - Budapest, Hungary </h3>
+						<h4> Study Abroad program in Computer Science </h4>
+					</td>
+					<td>
+						<h5>Spring 2013</h5>
+					</td>
+				</tr>
+			</table>
 		</td>
-		</tr>
-	</tr> 
+	</tr>
 	<tr>
 		<td> <h2>Experience</h2> </td>
 		<td> Lotsa Jobs <p> Another Job </p> </td>
