filling out resume

--- a/resume.html
+++ b/resume.html
@@ -38,13 +38,66 @@
 			</table>
 		</td>
 	</tr>
+	
 	<tr>
-		<td> <h2>Experience</h2> </td>
-		<td> Lotsa Jobs <p> Another Job </p> </td>
-	</tr>	
+		<td> 
+			<h2>Experience</h2> 
+		</td>
+		<td> 
+			<table border="0" cellspacing="0"> 
+				<tr> 
+					<td> 
+						<h3>Software Development Intern</h3> 
+						<h4> Kurzweil Music Systems -- Young Chang R&D Institute, Waltham, MA</h4>
+						<h6>•	Developed an iOS application for the Kurzweil MP10 and MP20 Home Keyboard Series</h6>
+					</td>
+					<td> 
+						<h5> Summer 2013 </h5> 
+					</td> 
+				</tr>
+				<tr>
+					<td>
+						<h3>Research Assistant</h3> 
+						<h4>Tufts University Developmental Technologies Lab</h4>
+						<h6>•	Member of the DevTech Research Team working on the development, testing, curriculum planning, and classroom teaching for Scratch Jr. and Ready for Robotics.</h6>  
+						<h6>•	Assisting with the development of the CHERP programming language.</h6>
+					</td>
+					<td> 
+						<h5> Fall 2013-present </h5> 
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<h3>Discrete Mathematics Teaching Assistant</h3> 
+						<h4>Tufts University Department of Computer Science</h4>
+						<h6>•	Grading homework assignments and exams under Prof. Lenore Cowen.</h6>  
+						<h6>•	Holding office hours for students.</h6>
+					</td>
+					<td> 
+						<h5> Fall 2012-Fall 2013 </h5> 
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<h3>Student Supervisor</h3> 
+						<h4>Tufts Univeristy Lilly Music Library</h4>
+						<h6>•	Assisting patrons at public service desk, open and close library, supervise student employees.</h6>  
+					</td>
+					<td> 
+						<h5> August 2011-present </h5> 
+					</td>
+				</tr>
+			</table>
+		</td>
+	</tr>
+
 	<tr>
-		<td> <h2>Relevant Coursework/h2> </td>
-		<td> Computer Science: web programming!<p> Math: abstract algebra :( </p> </td>
+		<td> 
+			<h2>Relevant Coursework/h2> </td>
+		<td> 
+			Computer Science: Data Structures, Discrete Mathematics, Machine Structure and Assembly Language Programming, Algorithms, IT Entrepreneurship, User Interface Design, Computer Graphics, Theory of Computing, Computer Vision, Programming Languages, Computational Geometry, Web Programming 
+			<p> Math: Multivariable Calculus, Linear Algebra, Differential Equations, Real Analysis, Abstract Algebra I & II, Applications of Advanced Calculus</p> 
+		</td>
 	</tr>
 	<tr>
 		<td> <h2>Skills</h2> </td>
