--- a/resume.html
+++ b/resume.html
@@ -49,7 +49,9 @@
 					<td> 
 						<h3>Software Development Intern</h3> 
 						<h4> Kurzweil Music Systems -- Young Chang R&D Institute, Waltham, MA</h4>
-						<h6>•	Developed an iOS application for the Kurzweil MP10 and MP20 Home Keyboard Series</h6>
+						<ul>
+							<li><h6>Developed an iOS application for the Kurzweil MP10 and MP20 Home Keyboard Series</h6></li>
+						</ul>
 					</td>
 					<td> 
 						<h5> Summer 2013 </h5> 
@@ -59,8 +61,10 @@
 					<td>
 						<h3>Research Assistant</h3> 
 						<h4>Tufts University Developmental Technologies Lab</h4>
-						<h6>•	Member of the DevTech Research Team working on the development, testing, curriculum planning, and classroom teaching for Scratch Jr. and Ready for Robotics.</h6>  
-						<h6>•	Assisting with the development of the CHERP programming language.</h6>
+						<ul>
+							<li><h6>Member of the DevTech Research Team working on the development, testing, curriculum planning, and classroom teaching for Scratch Jr. and Ready for Robotics.</h6></li>  
+							<li><h6>Assisting with the development of the CHERP programming language.</h6></li>
+						<ul>
 					</td>
 					<td> 
 						<h5> Fall 2013-present </h5> 
@@ -70,8 +74,10 @@
 					<td>
 						<h3>Discrete Mathematics Teaching Assistant</h3> 
 						<h4>Tufts University Department of Computer Science</h4>
-						<h6>•	Grading homework assignments and exams under Prof. Lenore Cowen.</h6>  
-						<h6>•	Holding office hours for students.</h6>
+						<ul>
+							<li><h6>Grading homework assignments and exams under Prof. Lenore Cowen.</h6></li>  
+							<li><h6>Holding office hours for students.</h6></li>
+						</ul>
 					</td>
 					<td> 
 						<h5> Fall 2012-Fall 2013 </h5> 
@@ -81,7 +87,9 @@
 					<td>
 						<h3>Student Supervisor</h3> 
 						<h4>Tufts Univeristy Lilly Music Library</h4>
-						<h6>•	Assisting patrons at public service desk, open and close library, supervise student employees.</h6>  
+						<ul>
+							<li><h6>Assisting patrons at public service desk, open and close library, supervise student employees.</h6></li>
+						</ul>
 					</td>
 					<td> 
 						<h5> August 2011-present </h5> 
