filling out resume

--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
 <body>
 <p> </p>
 
-<table border="1" width=90%> 
+<table border="1" width=80%> 
 	<tr>
 		<td> 
 			<h2>Education</h2> 
@@ -101,7 +101,7 @@
 
 	<tr>
 		<td> 
-			<h2>Relevant Coursework/h2> </td>
+			<h2>Relevant Coursework</h2> </td>
 		<td> 
 			Computer Science: Data Structures, Discrete Mathematics, Machine Structure and Assembly Language Programming, Algorithms, IT Entrepreneurship, User Interface Design, Computer Graphics, Theory of Computing, Computer Vision, Programming Languages, Computational Geometry, Web Programming 
 			<p> Math: Multivariable Calculus, Linear Algebra, Differential Equations, Real Analysis, Abstract Algebra I & II, Applications of Advanced Calculus</p> 
@@ -112,7 +112,6 @@
 		<td> Computer: UNIX/Linux, C++, C, Obective-C, Scheme, ML, HTML, CSS, OpenGL, Xcode,  Adobe Photoshop, Microsoft Office <p> Languages: Fluent in Spanish </p> </td>
 	</tr>	
 	</table>
-<p> That's the end of the table! </p>
 </body>
 
 
