filling out resume

--- a/resume.html
+++ b/resume.html
@@ -62,8 +62,8 @@
 						<h3>Research Assistant</h3> 
 						<h4>Tufts University Developmental Technologies Lab</h4>
 						<ul>
-							<li><h6>Member of the DevTech Research Team working on the development, testing, curriculum planning, and classroom teaching for Scratch Jr. and Ready for Robotics.</h6></li>  
-							<li><h6>Assisting with the development of the CHERP programming language.</h6></li>
+							<h6><li>Member of the DevTech Research Team working on the development, testing, curriculum planning, and classroom teaching for Scratch Jr. and Ready for Robotics.</li>  
+							<li>Assisting with the development of the CHERP programming language.</h6></li>
 						<ul>
 					</td>
 					<td> 
