--- a/resume.html
+++ b/resume.html
@@ -49,9 +49,9 @@
 					<td> 
 						<h3>Software Development Intern</h3> 
 						<h4> Kurzweil Music Systems -- Young Chang R&D Institute, Waltham, MA</h4>
-						<ul>
-							<li><h6>Developed an iOS application for the Kurzweil MP10 and MP20 Home Keyboard Series</h6></li>
-						</ul>
+						<h6><ul>
+							<li>Developed an iOS application for the Kurzweil MP10 and MP20 Home Keyboard Series</li>
+						</ul></h6>
 					</td>
 					<td> 
 						<h5> Summer 2013 </h5> 
@@ -61,10 +61,10 @@
 					<td>
 						<h3>Research Assistant</h3> 
 						<h4>Tufts University Developmental Technologies Lab</h4>
-						<ul>
-							<h6><li>Member of the DevTech Research Team working on the development, testing, curriculum planning, and classroom teaching for Scratch Jr. and Ready for Robotics.</li>  
-							<li>Assisting with the development of the CHERP programming language.</h6></li>
-						<ul>
+						<h6><ul>
+							<li>Member of the DevTech Research Team working on the development, testing, curriculum planning, and classroom teaching for Scratch Jr. and Ready for Robotics.</li>  
+							<li>Assisting with the development of the CHERP programming language.</li>
+						</ul></h6>
 					</td>
 					<td> 
 						<h5> Fall 2013-present </h5> 
@@ -74,10 +74,10 @@
 					<td>
 						<h3>Discrete Mathematics Teaching Assistant</h3> 
 						<h4>Tufts University Department of Computer Science</h4>
-						<ul>
-							<li><h6>Grading homework assignments and exams under Prof. Lenore Cowen.</h6></li>  
-							<li><h6>Holding office hours for students.</h6></li>
-						</ul>
+						<h6><ul>
+							<li>Grading homework assignments and exams under Prof. Lenore Cowen.</li>  
+							<li>Holding office hours for students.</li>
+						</ul></h6>
 					</td>
 					<td> 
 						<h5> Fall 2012-Fall 2013 </h5> 
@@ -87,9 +87,9 @@
 					<td>
 						<h3>Student Supervisor</h3> 
 						<h4>Tufts Univeristy Lilly Music Library</h4>
-						<ul>
-							<li><h6>Assisting patrons at public service desk, open and close library, supervise student employees.</h6></li>
-						</ul>
+						<h6><ul>
+							<li>Assisting patrons at public service desk, open and close library, supervise student employees.</li>
+						</ul></h6>
 					</td>
 					<td> 
 						<h5> August 2011-present </h5> 
