--- a/resume.html
+++ b/resume.html
@@ -85,9 +85,9 @@
 				</tr>
 				<tr>
 					<td>
-						<h6><h3>Student Supervisor</h3> 
+						<h3>Student Supervisor</h3> 
 						<h4>Tufts Univeristy Lilly Music Library</h4>
-						<ul>
+						<h6><ul>
 							<li>Assisting patrons at public service desk, open and close library, supervise student employees.</li>
 						</ul></h6>
 					</td>
