filling out resume

--- a/resume.html
+++ b/resume.html
@@ -86,8 +86,8 @@
 				<tr>
 					<td>
 						<h3>Student Supervisor</h3> 
-						<h4>Tufts Univeristy Lilly Music Library</h4>
-						<h6><ul>
+						<h4>Tufts Univeristy Lilly Music Library</h4><h6>
+						<ul>
 							<li>Assisting patrons at public service desk, open and close library, supervise student employees.</li>
 						</ul></h6>
 					</td>
