--- a/resume.html
+++ b/resume.html
@@ -61,7 +61,7 @@
 					<td>
 						<h3>Research Assistant</h3> 
 						<h4>Tufts University Developmental Technologies Lab</h4>
-						<h6><ul>
+						<h6><ul margin="0" padding="0">
 							<li>Member of the DevTech Research Team working on the development, testing, curriculum planning, and classroom teaching for Scratch Jr. and Ready for Robotics.</li>  
 							<li>Assisting with the development of the CHERP programming language.</li>
 						</ul></h6>
@@ -86,8 +86,8 @@
 				<tr>
 					<td>
 						<h3>Student Supervisor</h3> 
-						<h4>Tufts Univeristy Lilly Music Library</h4><h6>
-						<ul>
+						<h4>Tufts Univeristy Lilly Music Library</h4>
+						<h6><ul>
 							<li>Assisting patrons at public service desk, open and close library, supervise student employees.</li>
 						</ul></h6>
 					</td>
