--- a/resume.html
+++ b/resume.html
@@ -10,13 +10,13 @@
 <body>
 <p> </p>
 
-<table width=90%> 
+<table> 
 	<tr>
 		<td> 
 			<h2>Education</h2> 
 		</td>
 		<td> 
-			<table border="0" cellspacing="0"> 
+			<table> 
 				<tr> 
 					<td> 
 						<h3>Tufts University - Medford, MA </h3> 
@@ -44,7 +44,7 @@
 			<h2>Experience</h2> 
 		</td>
 		<td> 
-			<table border="0" cellspacing="0"> 
+			<table> 
 				<tr> 
 					<td> 
 						<h3>Software Development Intern</h3> 
