--- a/resume.html
+++ b/resume.html
@@ -48,8 +48,8 @@
 				<tr> 
 					<td> 
 						<h3>Software Development Intern</h3> 
-						<h4> Kurzweil Music Systems -- Young Chang R&D Institute, Waltham, MA</h4>
-						<h6><ul>
+						<h4> Kurzweil Music Systems -- Young Chang R&amp;D Institute, Waltham, MA</h4>
+						<h6> <ul>
 							<li>Developed an iOS application for the Kurzweil MP10 and MP20 Home Keyboard Series</li>
 						</ul></h6>
 					</td>
