--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Emma Hershey</title>
-Emma Hershey
+	<title>Emma Hershey</title>
+	Emma Hershey
+	<meta name="Emma Hershey" />
 </head>
 <body>
 <P>
