--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
 	<title>
 	Emma Hershey's Resume
 	</title>
+	<meta name="Emma Hershey" />
 	<link rel="stylesheet" href="resumestyle.css" />
 	<h1>Emma Hershey</h1>
 </head>
