--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Emma Hershey</title>
 	Emma Hershey
-	<meta name="Emma Hershey" />
+	<meta name="author" content="Emma Hershey" >
 </head>
 <body>
 <P>
