--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 	<title>
 	Emma Hershey's Resume
 	</title>
-	<meta name="author" content="Emma Hershey" >
+	<meta name="author" content="Emma Hershey" />
 	<link rel="stylesheet" href="resumestyle.css" />
 	<h1>Emma Hershey</h1>
 </head>
