--- a/resume.html
+++ b/resume.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-	Emma Hershey's Resume
-	</title>
+	<title> Emma Hershey's Resume </title>
 	<meta name="author" content="Emma Hershey" />
 	<link rel="stylesheet" href="resumestyle.css" />
 	<h1>Emma Hershey</h1>
