--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
 	<title> Emma Hershey's Resume </title>
 	<meta name="author" content="Emma Hershey" />
-	<link rel="stylesheet" href="resumestyle.css" />
+	<link rel="stylesheet" href="resumestyle.css" >
 	<h1>Emma Hershey</h1>
 </head>
 
