--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Emma Hershey</title>
 	Emma Hershey
-	<meta name="author" content="Emma Hershey" >
 </head>
 <body>
 <P>
