--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 Emma Hershey
 <P>
-<img src="plitvice.jpg">
+<img src="plitvice.jpg" target="_blank">
 </P>
 <P>
 <A HREF="http://ehersh.github.io/resume">Resume</A>
